translation-tool/inputs/source_meta/objects/HSvc_CustomerMatrix__c.object
<CustomObject>
    <description>Signifies the different offers that are applicable for a unique combination of Churn risk and customer value.
On each account, based on the Churn risk, customer value attributes, which would be synced by PSFT, the offers available can be determined.</description>
    <fields>
        <fullName>ChurnRisk__c</fullName>
        <label>Churn Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditRequest__c</fullName>
        <label>Credit Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerValue__c</fullName>
        <label>Customer Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispatch__c</fullName>
        <label>Dispatch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentUpgrade__c</fullName>
        <label>Equipment Upgrade</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HNS_Company_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HNS Company ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Matrices</relationshipLabel>
        <relationshipName>Customer_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( ExpiryDate__c &lt; TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RebateDispute__c</fullName>
        <label>Rebate Dispute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceDiscount__c</fullName>
        <label>Service Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicePlanChange__c</fullName>
        <label>Service Plan Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialOffers__c</fullName>
        <label>Special Offers</label>
        <type>TextArea</type>
    </fields>
    <label>Customer Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CustomerValue__c</columns>
        <columns>ChurnRisk__c</columns>
        <columns>ServicePlanChange__c</columns>
        <columns>EquipmentUpgrade__c</columns>
        <columns>CreditRequest__c</columns>
        <columns>Dispatch__c</columns>
        <columns>RebateDispute__c</columns>
        <columns>RMA__c</columns>
        <columns>SpecialOffers__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Customer Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(ExpiryDate__c &lt; TODAY(),ExpiryDate__c &lt; EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>